// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translate-to-withNamespaces-t 1. Translate-to-withNamespaces-t: 1. Translate-to-withNamespaces-t 1`] = `
"
const C = (props) => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key\\"
    />
  </div>
);

export default C;

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _reactI18next = require(\\"react-i18next\\");

const C = ({
  t,
  ...props
}) => React.createElement(\\"div\\", null, t(\\"key\\", {
  count: props.totalVisitors,
  totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
}));

var _default = (0, _reactI18next.withNamespaces)(C);

exports.default = _default;
"
`;

exports[`Translate-to-withNamespaces-t 2. Translate-to-withNamespaces-t: 2. Translate-to-withNamespaces-t 1`] = `
"
const C = ({ t }) => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_pluralization\\"
    />
  </div>
);

export default C;

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _reactI18next = require(\\"react-i18next\\");

const C = ({
  t
}) => React.createElement(\\"div\\", null, t(\\"key_with_pluralization\\", {
  count: props.totalVisitors,
  totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
}));

var _default = (0, _reactI18next.withNamespaces)(C);

exports.default = _default;
"
`;

exports[`Translate-to-withNamespaces-t 3. Translate-to-withNamespaces-t: 3. Translate-to-withNamespaces-t 1`] = `
"
// Simplified file without import or export
const C = ({ totalVisitors }) => (
  <div>
    <Translate
      count={totalVisitors}
      totalViews={numeral(totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_html\\"
    />
  </div>
);

export default C;

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _reactI18next = require(\\"react-i18next\\");

// Simplified file without import or export
const C = ({
  t,
  totalVisitors
}) => React.createElement(\\"div\\", null, safeT(t(\\"key_with_html\\", {
  count: totalVisitors,
  totalViews: numeral(totalVisitors).format(\\"0,0\\")
})));

var _default = (0, _reactI18next.withNamespaces)(C);

exports.default = _default;
"
`;

exports[`Translate-to-withNamespaces-t 4. Translate-to-withNamespaces-t: 4. Translate-to-withNamespaces-t 1`] = `
"
// Simplified file without import or export
const C = () => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_pluralization_and_html\\"
    />
    {something ? (<Translate i18nKey=\\"key\\" />) : (<Translate i18nKey=\\"key\\" />)}
  </div>
);

export default C;

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _reactI18next = require(\\"react-i18next\\");

// Simplified file without import or export
const C = ({
  t
}) => React.createElement(\\"div\\", null, safeT(t(\\"key_with_pluralization_and_html\\", {
  count: props.totalVisitors,
  totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
})), something ? t(\\"key\\") : t(\\"key\\"));

var _default = (0, _reactI18next.withNamespaces)(C);

exports.default = _default;
"
`;
